feat: add prepare script for GitHub installs
- Add prepare script that runs npm run build
- Enables automatic building when installing from GitHub
- devDependencies (tsup, etc.) are installed automatically before prepare runs
- Fixes module not found errors when using GitHub dependency

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "scripts": {
     "lint": "eslint . --ext .cjs,.js,.ts,.tsx",
     "lint:fix": "yarn lint --fix",
+    "prepare": "npm run build",
     "prepublishOnly": "yarn build",
     "test": "yarn run test:ts && yarn run test:unit",
     "test:unit": "jest",
